# Projects-assistant

./: .flake8  .gitignore  Dockerfile  README.md  README.rst  config.sh  deploy_application.yaml  docker-compose.yaml  hosts.conf  install_ansible_local.sh  install_docker.yaml  install_python.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
aiogrambot/: config.py  main.py
aiogrambot/handlers/: __init__.py
aiogrambot/handlers/channels/: messages.py
aiogrambot/handlers/users/: commands.py  messages.py
app/: .gitignore  docker-compose.yaml
app/aiogrambot/: Dockerfile  main.py  requirements.txt
app/aiogrambot/keyboards/: inline.py
app/aiogrambot/utils/: tasks.py
app/server/: main.py  requirements.txt
app/server/backend/: database.py  scheduller.py  services.py
app/trello_app/api/: trello_request.py
app/web-app/: nginx.conf  package.json
app/web-app/src/: App.vue  main.less
fastapi/: main.py
fastapi/backend/: auth.py  database.py  logging.py  scheduller.py  services.py
server/: Dockerfile  config.sh  main.py  pyproject.toml  requirements.txt
server/backend/: auth.py  database.py  services.py
tests/: test_trello_app.py
trello_app/: main.py  template.docx
trello_app/api/: __init__.py  google-drive.py  google_docs.py  google_drive.py  token.json  trello_request.py
trello_app/services/: pydocx.py  tui.py
web-app/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.jsx  App.vue  Asside.jsx  Main.jsx  Main.scss  index.scss  main.less
web-app/src/store/: index.js
(+13 files in other folders)
