[tool.poetry]
name = "trello-app"
version = "0.1.0"
description = "Trello and Google Drive assistant"
authors = ["pavel.milanov <pawel.milanov@uandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
environs = "^9.3.5"
requests = "^2.26.0"
APScheduler = "3.7.0"
google-api-python-client = "^2.33.0"
oauth2client = "^4.1.3"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pymongo = "^4.0.1"
aiogram = "^2.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
